--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="w3-container">
           <h5 class="w3-opacity"><b>SSC</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012</h6>
-          <p>SSC Passed from <abbr title="Bosco English High School">BEHS</abbr> ,  Thane</p><p>Per. &nbsp; 66.91 %</p><br>
+          <p>SSC Passed from <abbr title="Bosco English High School">BEHS</abbr> ,  Thane</p><p>Per. &nbsp; <span class="marks">66.91 %</span></p><br>
         </div>
       </div>
 
