--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Thane,Mumbai</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>smehboobs62@gmail.com</p>
-          <p><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="#" target="_blank">sms.com</a></p>
+          <p><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="#" target="_blank">mehboob96.github.io</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 9702020991</p>
           <hr>
 
@@ -211,7 +211,7 @@
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>smscv .com</b></h5>
+          <h5 class="w3-opacity"><b>mehboob96.github.io</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sept 2017 - &nbsp;<span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>This site is about my Resume, which is 100% <code>developed</code> by <abbr title="Shaikh Mehboob Siraj">SMS</abbr> , using Bootstrap and W3.CSS Frameworks.</p>
         </div>
