--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Developer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Thane,Mumbai</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>smehboobs62@gmail.com</p>
-          <p><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="mehboob96.github.io" target="_blank">Mehboob96.github.io</a></p>
+          <p><i class="fa fa-globe fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://mehboob96.github.io" target="_blank">Mehboob96.github.io</a></p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 9702020991</p>
           <hr>
 
