--- a/index.html
+++ b/index.html
@@ -1,84 +1,94 @@
 <!DOCTYPE html>
 <html>
-<!-- Curriculum Vitae -->
-<title>Resume :: SMS</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <head>
+        <!-- Curriculum Vitae -->
+        <title>Resume :: SMS</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<link rel="icon" type="image" href="sms.png">
-
-
-<!-- CSS BootStrap -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
-<!-- Script BootStrap -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link rel="icon" type="image" href="sms.png">
 
 
-<style>
+        <!-- CSS BootStrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
-    html,body,h1,h2,h3,h4,h5,h6 {
-      font-family: "Roboto", sans-serif;
-    }
-    a,a:hover{
-      color: #757575!important;
-      text-decoration:none!important;
-    }
-    .h4{
-      font-size: 1.2em;
-      font-family: "Sylfaen";
-      font-weight: bold;
-      background-color: transparent; 
-      color: #000;
-      /*z-index: 9999;*/
-      letter-spacing: 0.3em;
-    }
+        <!-- Script BootStrap -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-    .vision h2{
-      font-family: "Times New Roman", Serif, sans-serif;
-      margin-top: 0.8em;
-      color: #009688;
-    }
-    .quotation-mark-left{
-      display: inline;
-      font-weight: bold;
-      font-size: 1.9em;
-      color: #009688;
-      font-family: "Times New Roman", Georgia, Serif;
-    }
 
-    .quotation-mark-right{
-      /*margin-left: 4.2em;*/
-      display: inline;
-      font-weight: bold;
-      font-size: 1.9em;
-      color: #009688;
-      font-family: "Times New Roman", Georgia, Serif;
-    }
+        <style>
 
-    .myvision{
-      font-family: "Times New Roman",Serif, sans-serif;
-      letter-spacing: 0.1em;
-      font-size: 1.3em;
-    }
+            html,body,h1,h2,h3,h4,h5,h6 {
+              font-family: "Roboto", sans-serif;
+            }
+            a,a:hover{
+              color: #757575!important;
+              text-decoration:none!important;
+            }
+            .h4{
+              font-size: 1.2em;
+              font-family: "Sylfaen";
+              font-weight: bold;
+              background-color: transparent; 
+              color: #000;
+              /*z-index: 9999;*/
+              letter-spacing: 0.3em;
+            }
 
-    .marks{
-      color: #009688;
-    }
+            .vision h2{
+              font-family: "Times New Roman", Serif, sans-serif;
+              margin-top: 0.8em;
+              color: #009688;
+            }
+            .quotation-mark-left{
+              display: inline;
+              font-weight: bold;
+              font-size: 1.9em;
+              color: #009688;
+              font-family: "Times New Roman", Georgia, Serif;
+            }
 
-    .tech,.skills{
-      padding-top: 0.2em;
-      margin-left: 1em;
-    }
-    footer > a{
-      padding-right: 0.1em;
-    }
+            .quotation-mark-right{
+              /*margin-left: 4.2em;*/
+              display: inline;
+              font-weight: bold;
+              font-size: 1.9em;
+              color: #009688;
+              font-family: "Times New Roman", Georgia, Serif;
+            }
 
-</style>
+            .myvision{
+              font-family: "Times New Roman",Serif, sans-serif;
+              letter-spacing: 0.1em;
+              font-size: 1.3em;
+            }
+
+            .marks{
+              color: #009688;
+            }
+
+            .tech,.skills{
+              padding-top: 0.2em;
+              margin-left: 1em;
+            }
+            footer > a{
+              padding-right: 0.1em;
+            }
+
+        </style>
+        
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-5177231554650864",
+            enable_page_level_ads: true
+          });
+        </script>
+    </head>
 <body>
 
 <!-- Page Container -->
